1.4 beta 1
==========
(Richard Jones)
- SF Patch #1458315 - Customisable Browse Index, fixes bug #1456227

(Robert Tansley)
- UNIQUE constraint applied to schema namespace + short_id (not element).
  Fixed bug SF #1460515.

(Lester Bowser, Robert Tansley)
- Fixes for Oracle database_schema.sql

(Scott Yeadon)
- SF bug #1456988 - database-schema.sql and database-schema_13_14.sql inconsistencies
- update-handle-prefix script changed to also update the metadatavalue table
- SF bug #1456555 - i18n - missing tags
- SF bug #1456533 - dspace.url inconsistency
- SF bug #1456537 - Copyright statement year out of date
- SF bug #1456529 - Subject search in navbar-default.jsp non-XHTML compliant
- SF bug #1456305 - Bitstream Format Registry - Internal and Submitting
- SF bug #1456285 - Search index config and advanced search not in sync
- SF bug #1456278 - Wrong link in jsp/dspace-admin/list-metadata-fields.jsp
- SF Patch #1455842 - minor mediafilter fixes
- SF Patch #1461039 - Exceptions in media filter

(Tim Donohue)
- SF Patch #1455545 - Help links do not appear in IE, fixes SF bug #1380663
- SF Patch #1456241 - Minor fix to Submission Progress bar "Jump To"

(Martin Hald)
- SF Patch #1456372 - Non-DC browse indices, fixes SF bug #1456227 
- SF Patch #1456306 - Configuring simple item, fixes SF bugs #1455712, #1456566 and #1455691
- SF Patch #1455107 - MetadataValue Database Index
- SF Patch #1455605 - Submit Review Page Schema fix

(Phillip Franks)
- SF Patch #1456173 - updated database_schema.sql for Oracle (partially fixes SF bug #1455290)

(Larry Stone)
- SF Patch #1456751 - Fix Packager command's output message
- SF Patch #1456761 - PluginManager config-reading bugs (fix patch #1455842)
- SF Patch #1455813 - cleanup dspace.cfg for 1.4
- SF Patch #1455904 - fix crosswalk validation in 1.4alpha1
- SF Patch #1453425 - fix crosswalk + packager configurations, fixes #1456564

(Larry Stone, Michael Drewitz, Scott Yeadon)
- Documentation updates